Clean up imports/ Makefile.
imports/ now build out of tree succesfully.

--- a/imports/Makefile.am
+++ b/imports/Makefile.am
@@ -1,27 +1,38 @@
-IMPORTS_LCL = stdlib.lcl \
-  assert.lcl ctype.lcl errno.lcl \
-  limits.lcl locale.lcl math.lcl \
-  setjmp.lcl signal.lcl stdarg.lcl \
-  stdio.lcl string.lcl \
-  strings.lcl time.lcl
+# Forget about $(srcdir)
+# We have to copy the sources to $(builddir) manually
+VPATH =
 
-IMPORTS_LCS = stdlib.lcs \
+IMPORTS_STDLIB_LCS = stdlib.lcs
+
+IMPORTS_LIB_LCS = \
   assert.lcs ctype.lcs errno.lcs \
   limits.lcs locale.lcs math.lcs \
   setjmp.lcs signal.lcs stdarg.lcs \
   stdio.lcs string.lcs \
   strings.lcs time.lcs
 
+IMPORTS_LCS = $(IMPORTS_STDLIB_LCS) $(IMPORTS_LIB_LCS)
+
+IMPORTS_LCL = $(subst .lcs,.lcl,$(IMPORTS_LCS))
+
 ## List of files
 imports_DATA = $(IMPORTS_LCL) $(IMPORTS_LCS)
 
 all: $(IMPORTS_LCS)
 
+# stdlib.lcs must be built first
+$(IMPORTS_LIB_LCS): $(IMPORTS_STDLIB_LCS)
+
 ## Rules to make splint & the dumps
 SPLINT = $(top_builddir)/src/splint$(EXEEXT)
 
+# Copy the sources to $(builddir)
+%.lcl: $(srcdir)/%.lcl
+	cp $^ $@
+
+# Build .lcs files in-place
 %.lcs: %.lcl
-	$(SPLINT) $<
+	LARCH_PATH="$(top_builddir)/lib:$(top_srcdir)/lib" $(SPLINT) $<
 
 ## Put these files in $prefix/share/lclint/imports
 importsdir = $(pkgdatadir)/imports
@@ -30,4 +41,4 @@ importsdir = $(pkgdatadir)/imports
 EXTRA_DIST = $(imports_DATA)
 
 ## Clean generated files
-CLEANFILES = $(IMPORTS_LCS)
+CLEANFILES = *.lcl *.lcs
