--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,7 +1,4 @@
-## Put these files in $prefix/share/splint/lib
-splintlibdir = $(pkgdatadir)/lib
-
-UnixHeaders = stdio.h stdlib.h
+SPLINT = $(top_builddir)/src/splint$(EXEEXT)
 
 ## List of files
 splintlib_DATA = \
@@ -9,21 +6,16 @@ splintlib_DATA = \
   unix.h unix.lcd unixstrict.lcd CTrait.syms CTraitGen.lcl bool.h \
   file.mts file.xh filerw.mts filerw.xh \
   lclinit.lci linux.h lslinit.lsi tainted.mts tainted.xh \
-  stdio.h stdlib.h $(UnixHeaders)
+  stdio.h stdlib.h
+
+## Put these files in $prefix/share/splint/lib
+splintlibdir = $(pkgdatadir)/lib
 
 ## Include them in the distribution
 EXTRA_DIST = $(splintlib_DATA)
 
-##get rid of lcd files if the user does a make clean
-CLEANFILES = posix.lcd standard.lcd unix.lcd \
-             posixstrict.lcd  standardstrict.lcd  unixstrict.lcd
-
-
-## Rules to make splint & the dumps
-
-SPLINT = $(top_builddir)/src/splint$(EXEEXT)
-
-all: standard.lcd standardstrict.lcd posix.lcd posixstrict.lcd unix.lcd unixstrict.lcd
+# Get rid of lcd files if the user does a make clean
+CLEANFILES = *.lcd
 
 standard.lcd: standard.h
 	$(SPLINT) -nof -nolib +impconj $^ -dump standard
@@ -37,8 +29,8 @@ posix.lcd: standard.h posix.h
 posixstrict.lcd: standard.h posix.h
 	$(SPLINT) -nof -nolib +impconj -DSTRICT $^ -dump posixstrict
 
-unix.lcd: standard.h posix.h unix.h $(UnixHeaders)
+unix.lcd: standard.h posix.h unix.h stdio.h stdlib.h
 	$(SPLINT) -supcounts -nof -incondefs -nolib +impconj $^ -dump unix
 
-unixstrict.lcd: standard.h posix.h unix.h $(UnixHeaders)
+unixstrict.lcd: standard.h posix.h unix.h stdio.h stdlib.h
 	$(SPLINT) -supcounts -nof -incondefs -nolib +impconj -DSTRICT $^ -dump unixstrict
