Streamline imports/ Makefile to build .lcs files in-place.
Separate directory build will be supported via VPATH and oncoming
splint .lcs file generation behaviour change.

--- a/imports/Makefile.am
+++ b/imports/Makefile.am
@@ -1,6 +1,4 @@
-# Forget about $(srcdir)
-# We have to copy the sources to $(builddir) manually
-VPATH =
+SPLINT = $(top_builddir)/src/splint$(EXEEXT)
 
 IMPORTS_STDLIB_LCS = stdlib.lcs
 
@@ -13,22 +11,13 @@ IMPORTS_LIB_LCS = \
 
 IMPORTS_LCS = $(IMPORTS_STDLIB_LCS) $(IMPORTS_LIB_LCS)
 
-IMPORTS_LCL = $(subst .lcs,.lcl,$(IMPORTS_LCS))
+IMPORTS_LCL = $(IMPORTS_LCS:.lcs=.lcl)
 
 ## List of files
 imports_DATA = $(IMPORTS_LCL) $(IMPORTS_LCS)
 
-all: $(IMPORTS_LCS)
-
 # stdlib.lcs must be built first
 $(IMPORTS_LIB_LCS): $(IMPORTS_STDLIB_LCS)
-
-## Rules to make splint & the dumps
-SPLINT = $(top_builddir)/src/splint$(EXEEXT)
-
-# Copy the sources to $(builddir)
-%.lcl: $(srcdir)/%.lcl
-	cp $^ $@
 
 # Build .lcs files in-place
 %.lcs: %.lcl
@@ -41,4 +30,4 @@ importsdir = $(pkgdatadir)/imports
 EXTRA_DIST = $(imports_DATA)
 
 ## Clean generated files
-CLEANFILES = *.lcl *.lcs
+CLEANFILES = *.lcs
